--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ data
 
 # asstes for running the repo
 asstes/*
+
+Dockerfile
+checkpoints/
+mesh/
+model/
+openpose/
+run_fit.sh
+smpl.obj
+smpl_registration/fit_SMPLHD_.py
+*.tar
